mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  mongo-express
  namespace: default
  labels:
    app:  mongo-express
spec:
  selector:
    matchLabels:
      app: mongo-express
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  mongo-express
    spec:
      containers:
      - name:  mongo-express
        image:  mongo-express:latest
        ports:
        - containerPort:  8081
          name:  mongo-express
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
  namespace: default
spec:
  selector:
    app: mongo-express
  type: LoadBalancer
  ports:
  - name: mongo-express
    protocol: TCP
    port: 8081
    targetPort: 8081
    nodePort: 30000
