mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  mongo
  namespace: default
  labels:
    app:  mongo
spec:
  selector:
    matchLabels:
      app: mongo
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  mongo
    spec:
      containers:
      - name:  mongo
        image:  mongo:latest
        ports:
        - containerPort:  27017
          name:  mongo
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: default
spec:
  selector:
    app: mongo
  ports:
  - name: mongodb
    protocol: TCP
    port: 27017
    targetPort: 27017
